--- a/main.html
+++ b/main.html
@@ -1,16 +1,113 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Myntra Size Chart</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Optional CSS for styling the size chart table */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+
+        th {
+            background-color: #f4f4f4;
+        }
+
+        td {
+            background-color: #fafafa;
+        }
+
+        /* Styling for header */
+        thead {
+            background-color: #f0f0f0;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #e1e1e1;
+        }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <!-- Myntra Size Chart Table -->
+    <table>
+        <!-- Table Header -->
+        <thead>
+            <tr>
+                <th>Size</th>
+                <th>Chest (inches)</th>
+                <th>Waist (inches)</th>
+                <th>Hip (inches)</th>
+                <th>Height (inches)</th>
+            </tr>
+        </thead>
+
+        <!-- Table Body -->
+        <tbody>
+            <!-- Size Chart Row 1 -->
+            <tr>
+                <td>S</td>
+                <td>34-36</td>
+                <td>28-30</td>
+                <td>36-38</td>
+                <td>5'3" - 5'5"</td>
+            </tr>
+
+            <!-- Size Chart Row 2 -->
+            <tr>
+                <td>M</td>
+                <td>38-40</td>
+                <td>30-32</td>
+                <td>38-40</td>
+                <td>5'5" - 5'7"</td>
+            </tr>
+
+            <!-- Size Chart Row 3 -->
+            <tr>
+                <td>L</td>
+                <td>42-44</td>
+                <td>34-36</td>
+                <td>40-42</td>
+                <td>5'7" - 5'9"</td>
+            </tr>
+
+            <!-- Size Chart Row 4 -->
+            <tr>
+                <td>XL</td>
+                <td>46-48</td>
+                <td>38-40</td>
+                <td>42-44</td>
+                <td>5'9" - 6'0"</td>
+            </tr>
+
+            <!-- Size Chart Row 5 -->
+            <tr>
+                <td>XXL</td>
+                <td>50-52</td>
+                <td>42-44</td>
+                <td>44-46</td>
+                <td>6'0" - 6'2"</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
