--- a/main.html
+++ b/main.html
@@ -52,9 +52,8 @@
             <tr>
                 <th>Size</th>
                 <th>Chest (inches)</th>
+                <th>Sleeve Length (inches)</th>
                 <th>Waist (inches)</th>
-                <th>Hip (inches)</th>
-                <th>Height (inches)</th>
             </tr>
         </thead>
 
@@ -62,47 +61,45 @@
         <tbody>
             <!-- Size Chart Row 1 -->
             <tr>
-                <td>S</td>
-                <td>34-36</td>
-                <td>28-30</td>
-                <td>36-38</td>
-                <td>5'3" - 5'5"</td>
+                <td>M</td>
+                <td>34</td>
+                <td>25</td>
+                <td>28</td>
             </tr>
 
             <!-- Size Chart Row 2 -->
             <tr>
-                <td>M</td>
-                <td>38-40</td>
-                <td>30-32</td>
-                <td>38-40</td>
-                <td>5'5" - 5'7"</td>
+                <td>L</td>
+                <td>38</td>
+                <td>30</td>
+                <td>31</td>
             </tr>
 
             <!-- Size Chart Row 3 -->
             <tr>
-                <td>L</td>
-                <td>42-44</td>
-                <td>34-36</td>
-                <td>40-42</td>
-                <td>5'7" - 5'9"</td>
-            </tr>
-
-            <!-- Size Chart Row 4 -->
-            <tr>
                 <td>XL</td>
-                <td>46-48</td>
-                <td>38-40</td>
-                <td>42-44</td>
-                <td>5'9" - 6'0"</td>
+                <td>40</td>
+                <td>32</td>
+                <td>33</td>
             </tr>
 
-            <!-- Size Chart Row 5 -->
+            <!-- Additional Rows can be added here -->
             <tr>
-                <td>XXL</td>
-                <td>50-52</td>
-                <td>42-44</td>
-                <td>44-46</td>
-                <td>6'0" - 6'2"</td>
+                <td>32</td>
+                <td>23</td>
+                <td>24</td>
+            </tr>
+
+            <tr>
+                <td>Waist</td>
+                <td>25</td>
+                <td>28</td>
+            </tr>
+
+            <tr>
+                <td>Sleeve</td>
+                <td>24</td>
+                <td>25</td>
             </tr>
         </tbody>
     </table>
